# orbit_wars

./: .gitignore  CLAUDE.md  README.md  game_replay_early.html  pyproject.toml  requirements.txt
agents/: __init__.py  advanced.py  aggressive.py  apex.py  baseline.py  competitive.py  early_ultra.py  hybrid.py  lookahead.py  rl_agent.py  strategic.py  ultra.py  vanguard.py
configs/: expert_iteration.yaml  ppo_default.yaml  ppo_selfplay.yaml  transformer_dagger.yaml  transformer_mixed.yaml  transformer_ppo.yaml  v2_bc.yaml  v2_default.yaml  v2_exit.yaml  v2_exit_capstone.yaml  v2_exit_embed128.yaml  v2_exit_embed256.yaml  v2_exit_gumbel.yaml  v2_exit_neural.yaml  v2_exit_producer256.yaml  v2_exit_producer256_v2.yaml  v2_exit_producer256_v3.yaml  v2_exit_rollout.yaml  v2_pbrs_pfsp.yaml  v2_selfplay.yaml  v2_selfplay_fast.yaml  v2_selfplay_smoke.yaml  v3_features.yaml  v4_ceiling.yaml
envs/: __init__.py  orbit_wars_env.py
evaluation/: __init__.py  evaluate.py
experiments/: RECOMMENDATIONS_REPORT.md  REPORT.md  margin_table.md  margin_vs_apex.json  results.json  summary_table.md  summary_table2.md
notebooks/: 1103-peaking-bot.ipynb  colab_embed_ab.ipynb  colab_gumbel_ckpt_gate.ipynb  colab_gumbel_cscale_ab.ipynb  exit_train_colab.ipynb  explore.ipynb  orbit-wars-1000-public-score-agent.ipynb  orbit_wars_rl.ipynb  train_colab.ipynb  train_v2_colab.ipynb  transformer_dagger_walkthrough.ipynb  transformer_mixed_walkthrough.ipynb  v2_orbitnet_walkthrough.ipynb  winbc_24m_resume_colab.ipynb  winbc_colab.ipynb
play/: app.py
rl_research/: BUCKETED_CONFIG_EXPERIMENTS.md  BUCKETED_CONFIG_PROMPT.md  CLONE_RESIDUAL_FINDINGS.json  CLONE_RESIDUAL_FINDINGS.md  CLONE_RESIDUAL_FINDINGS_0619.json  CLONE_RESIDUAL_FINDINGS_0619.md  CONTESTATION_OVERLAY_FINDINGS.md  CONTESTED_INSTRUMENT_FINDINGS.md  CONTEST_4P_GATE_PROMPT.md  CONTEST_TIER2_ENSEMBLE_PROMPT.md  DIFFUSION_FLOW_ACTION_PLAN.md  EXPLORED_AND_ABANDONED.md  H1_HOLDING_PAD_FINDINGS.md  H2_TARGET_SELECTION_FINDINGS.md  IMPROVEMENT_RESEARCH.md  LEADERBOARD_CLIMB_PLAN.md  OFF_MIRROR_INJECTION_FINDINGS.md  PHASE5_NEURAL_VALUE_EXIT_PLAN.md  REPORT.md  RICH_BC_SELECTION_FINDINGS.md  RNR_CONTESTATION_FINDINGS.md  SIMULATOR_AUDIT.md  STRONGER_EXPERT_SEARCH_PLAN.md  TOP_TIER_REPLAY_CORPUS.md  V3_STALL_PLAYBOOK.md  _selfcheck.json  _selfcheck.md  _smoke.json  _smoke.md  _val.json  _val.md
scripts/: _resolver_probe.py  arena.py  build_bc_bundle.py  build_shards.py  build_v5_bundle.py  coverage_probe.py  divergence_mine.py  (+45 more)
(+938 files in other folders)
