[project]
name = "orbit-wars"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kaggle-environments>=1.28.0",
    "stable-baselines3[extra]>=2.3.0",
    "gymnasium>=0.29.0",
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "grpcio-tools>=1.50.0",  # kaggle-environments pins 1.30.0 which breaks on Python 3.12
]

[project.optional-dependencies]
dev = [
    "tensorboard",
    "ipykernel",
    "jupyter",
    "kaggle>=1.6",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[tool.uv]
# For CUDA builds, replace with the appropriate index, e.g.:
# torch-index = "https://download.pytorch.org/whl/cu121"
# and run: uv sync --extra-index-url https://download.pytorch.org/whl/cu121

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["outputs", "notebooks", ".venv"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade,
# B = bugbear, SIM = simplify. Sensible defaults, not pedantic.
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # function calls in argument defaults (common for configs)
]

[tool.ruff.lint.per-file-ignores]
# Submission agent intentionally mutates sys.path before importing (Kaggle
# packaging — see the ModuleNotFoundError fix in MEMORY.md).
"v2/agent_v3.py" = ["E402"]

[tool.pyright]
include = ["src", "v2", "agents", "evaluation", "scripts"]
exclude = ["outputs", "notebooks", "**/__pycache__", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# torch / numpy / kaggle-environments ship partial-or-no stubs; don't drown
# in missing-stub noise on an RL repo.
reportMissingTypeStubs = false
reportMissingModuleSource = false
